--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,319 @@
 @import "tailwindcss";
+/* ---------------- */
+/* ROOT VARIABLES   */
+/* ---------------- */
+:root {
+    /* Background / Light Cream */
+    --color-bg: rgb(234, 229, 219);
+    /* Background / Lighter Cream */
+    --color-bgl: rgb(243, 237, 228);
+    --color-gray: #eee;
+    /* Dark Gray / Navbar and text */
+    --color-dark: #333;
+    /* Dark Gray / Navbar and text */
+    --color-black: #000;
+    /* Dark Gray / Navbar and text */
+    --color-lessdark: #565555;
+
+    /* Accent / Orange */
+    --color-accent: rgb(216, 101, 53);
+}
+
+/* ---------------- */
+/* THEMES           */
+/* ---------------- */
+/* Dark theme */
+.theme-dark {
+    color: var(--color-bg);
+    background-color: var(--color-dark);
+}
+/* Less Dark theme */
+.theme-less-dark {
+    color: var(--color-bg);
+    background-color: var(--color-lessdark);
+}
+
+/* Light theme */
+.theme-light {
+    color: var(--color-dark);
+    background-color: var(--color-bg);
+}
+
+/* ---------------- */
+/* BACKGROUND COLORS*/
+/* ---------------- */
+/* Background color classes */
+.bg-light {
+    background-color: var(--color-bg);
+}
+
+/* Background color classes */
+.bg-lighter {
+    background-color: var(--color-bgl);
+}
+
+/* Background color classes */
+.bg-gray {
+    background-color: var(--color-gray);
+}
+
+.bg-less-dark {
+    background-color: var(--color-dark);
+}
+.bg-dark {
+    background-color: var(--color-lessdark);
+}
+.bg-black {
+    background-color: var(--color-black);
+}
+
+.bg-accent {
+    background-color: var(--color-accent);
+}
+.bg-texture {
+    background-image: url('/src/assets/bg-paperlike.png');
+}
+/* ---------------- */
+/* TEXT COLORS      */
+/* ---------------- */
+/* Text color classes */
+.text-light {
+    color: var(--color-bg);
+}
+
+.text-dark {
+    color: var(--color-dark);
+}
+
+.text-accent {
+    color: var(--color-accent);
+}
+/* ---------------- */
+/* DROPDOWN SECTION */
+/* ---------------- */
+
+.dropdown-bridge {
+    position: absolute;
+    background-color: transparent;
+    width: 100%;
+    height: 35px;
+    left: 0px;
+    bottom: -35px;
+}
+.dropdown-group {
+    position:absolute; 
+    display: none;
+    top: 65px;
+    right: 50%;
+    transform: translateX(50%);
+    border: 2px solid var(--color-bg);
+}
+.dropdown-button {
+    transition: 0.3s ease;
+    color: var(--color-dark);
+}
+
+/* dropdown-button hover effects: */
+.dropdown-button:hover .arrow-icon {
+    transform: rotate(90deg);
+}
+.dropdown-button:hover .dropdown-group {
+    position: absolute; 
+    display: block;   
+}
+.dropdown-button:hover {
+    color: var(--color-bg);
+    background-color: var(--color-dark);
+    cursor: pointer
+}
+.arrow-icon {
+    transition: 0.3s ease;
+}
+.dropdown-item {
+    color: var(--color-dark);
+    border-radius: 5px;
+    border-bottom: 0.5px solid gray;
+}
+.dropdown-item:hover {
+    color: var(--color-bg);
+    background-color: var(--color-dark);
+    cursor: pointer;
+}
+/* ---------------------------------- */
+
+
+/* ---------------- */
+/* SEARCH BAR STYLE */
+/* ---------------- */
+
+.search-button {
+    margin: 0px 3px;
+    background-color: white;
+
+    transition: 0.2s ease;
+}
+.search-button:hover {
+    margin: 0px 3px;
+    background-color: var(--color-dark);
+    color: var(--color-bg);
+    cursor: pointer;
+}
+/* ---------------------------------- */
+
+
+/* ---------------- */
+/* LOGIN / REGISTER / LOGOUT */
+/* ---------------- */
+.login-button {
+    color: var(--color-dark);
+    transition: 0.3s ease;
+}
+.login-button:hover {
+    color: var(--color-accent);
+    
+}
+/* logout button */
+.logout {
+    background-color: rgb(193, 84, 84);
+}
+
+.register-button {
+    background-image: none;
+    background-color: var(--color-dark);
+    color: var(--color-bg);
+  
+
+    transition: 0.3s ease;
+}
+.register-button:hover {
+    background-image: url('/src/assets/orange-texture.png');
+    background-color: var(--color-dark);
+    color: var(--color-dark);
+
+}
+/* ---------------------------------- */
+
+/* ---------------- */
+/* ACCOUNT BUTTON   */
+/* ---------------- */
+
+.account-button {
+    background-image: none;
+    background-color: var(--color-dark);
+    color: var(--color-bg);
+    transition: 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    /* Tailwind's p-2 */
+    cursor: pointer;
+    border-radius: 0.25rem;
+    /* Tailwind's rounded */
+}
+.account-button:hover {
+    background-image: url('/src/assets/orange-texture.png');
+    color: var(--color-dark);
+}
+.account-button:hover .dropdown-group {
+    position: absolute;
+    display: block;
+}
+/* ---------------------------------- */
+
+/* ---------------- */
+/* DISCOVER BUTTON   */
+/* ---------------- */
+
+.discover-button {
+    background-image: url('/src/assets/bg-paperlike.png');
+    color: var(--color-dark);
+    transition: 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    /* Tailwind's p-2 */
+    cursor: pointer;
+    border-radius: 0.25rem;
+    /* Tailwind's rounded */
+    font-weight: 600;
+    
+}
+.discover-button:hover {
+    background-image: url('/src/assets/orange-texture.png');
+    color: var(--color-dark);
+}
+
+/* ---------------------------------- */
+
+
+/* logo */
+.logo-div {
+    transition: 0.3s ease;
+}
+/* logo */
+.logo {
+    transition: 0.3s ease;
+}
+.logo-div:hover {
+    background-color: var(--color-dark);
+        /* makes logo white */
+}
+.logo:hover {
+    filter: brightness(0) invert(1);
+        /* makes logo white */
+}
+
+/* ---------------- */
+/* CARD CONTENT   */
+/* ---------------- */
+
+.card-descr {
+    position: absolute;
+    bottom: -200px;
+    left:0px;
+    transition: 0.3s ease;
+    height: 300px;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.03);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%);
+    color:var(--color-bg);
+    
+    
+}
+.card-content:hover .card-descr {    
+    visibility: visible;
+    transform: translateY(-145px);
+}
+/* .lazy-image {    
+    transition: 0.3s ease !important;
+}
+.lazy-image:hover {    
+    transform: scale(1.05) !important;
+}
+*/
+
+/* ---------------------------------- */
+
+/* ---------------- */
+/*      HEADINGS    */
+/* ---------------- */
+.text-texture {
+    font-size: 72px;
+    font-weight: bold;
+    background-image: url('/src/assets/bg-paperlike.png');
+    
+    background-size: cover;
+    background-position: center;
+    color: transparent;
+
+    -webkit-background-clip: text;
+    background-clip: text;
+
+    /* Optional for Safari and Chrome */
+    -webkit-text-fill-color: transparent;
+}
+.header-section {
+    background-color: #333;
+}
